--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,9 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.6.0-216.0.dev
+  sdk: ">=3.4.3 <4.0.0"
+
+
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -77,6 +79,7 @@ flutter:
     - assets/images/
     - assets/logos/
     - assets/icons/
+    - assets/Fruits/
 
   #   - images/a_dot_ham.jpeg
 
