'Add to cart screen and functionality and many changing'

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,7 @@ flutter:
     - assets/logos/
     - assets/icons/
     - assets/Fruits/
+    - assets/Animation/
 
   #   - images/a_dot_ham.jpeg
 
