--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,11 @@ dependencies:
   shared_preferences: ^2.3.2
   lottie: ^3.1.2
   country_code_picker: ^3.0.0
+  another_stepper: ^1.2.2
+  flutter_spinkit: ^5.2.1
+  # Stripe Payment Package
+  flutter_stripe: ^11.1.0
+  dio: ^5.7.0
 
 dev_dependencies:
   flutter_test:
